--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "checking\\component\\": "component/"
+            "checking\\components\\": "components/"
         }
     }
 }
